GeoNode color attribute swatch on modifier frontend behaves wrong #93873

Closed
opened 2021-12-08 21:12:39 +01:00 by user1 · 10 comments

System Information
Operating system: Linux-5.4.0-91-generic-x86_64-with-glibc2.27 64 Bits
Graphics card: GeForce GT 630/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 390.144

Blender Version
Broken: version: 3.1.0 Alpha, branch: master, commit date: 2021-12-06 23:52, hash: 5cad004d71
Worked: (newest version of Blender that worked as expected)

Short description of error
The colorwheel that gets passed from the GN nodetree to the modifier frontend shows alpha values with 4 digits before the dot, and the value picker next to the swatch is at 50%, but the output is black. It allows only values above 50%, or no color at all.

Exact steps for others to reproduce the error
Open the file and try to create say a dark brown.
Bildschirmfoto zu 2021-12-08 21-06-12.png
color attribute bug.blend

**System Information** Operating system: Linux-5.4.0-91-generic-x86_64-with-glibc2.27 64 Bits Graphics card: GeForce GT 630/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 390.144 **Blender Version** Broken: version: 3.1.0 Alpha, branch: master, commit date: 2021-12-06 23:52, hash: `5cad004d71` Worked: (newest version of Blender that worked as expected) **Short description of error** The colorwheel that gets passed from the GN nodetree to the modifier frontend shows alpha values with 4 digits before the dot, and the value picker next to the swatch is at 50%, but the output is black. It allows only values above 50%, or no color at all. **Exact steps for others to reproduce the error** Open the file and try to create say a dark brown. ![Bildschirmfoto zu 2021-12-08 21-06-12.png](https://archive.blender.org/developer/F12712885/Bildschirmfoto_zu_2021-12-08_21-06-12.png) [color attribute bug.blend](https://archive.blender.org/developer/F12712889/color_attribute_bug.blend)
Author

Added subscriber: @user1

Added subscriber: @user1

#95213 was marked as duplicate of this issue

#95213 was marked as duplicate of this issue

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Philipp Oeser self-assigned this 2021-12-13 08:58:02 +01:00
Member

This is related to #93899 ("Animate Property" UI-dot-button does not insert key when the input is a Color [field, constant is OK]), but not the same, will check...

This is related to #93899 ("Animate Property" UI-dot-button does not insert key when the input is a Color [field, constant is OK]), but not the same, will check...
Philipp Oeser removed their assignment 2022-01-18 21:07:21 +01:00
Member

Will have to concentrate on triaging for a while (and step down).

Will have to concentrate on triaging for a while (and step down).
Member

Added subscriber: @Peter-Sampson

Added subscriber: @Peter-Sampson

I've encountered this problem as well and have a few observations.
R, G, B, and also V from hsv range from -10000 to 10000 instead of 0 to 1. The hsv Value slider to the right of the wheel behaves differently with a range from about 0 to 41 and the visual dot doesn't reflect the current value and stays stuck in the middle.

I've encountered this problem as well and have a few observations. R, G, B, and also V from hsv range from -10000 to 10000 instead of 0 to 1. The hsv Value slider to the right of the wheel behaves differently with a range from about 0 to 41 and the visual dot doesn't reflect the current value and stays stuck in the middle.
Pratik Borhade self-assigned this 2022-02-18 20:11:20 +01:00

This issue was referenced by be6bcaa8c1

This issue was referenced by be6bcaa8c13dfca98e56d81afd3d19ba226c2699
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#93873
No description provided.